<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/main_text_field_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="100500" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ac"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ac"
        app:layout_constraintBottom_toTopOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_plus_minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus_minus"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_plus_minus"
        app:layout_constraintBottom_toTopOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_percent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_ac" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_percent"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_percent"
        app:layout_constraintBottom_toTopOf="@+id/btn_9"
        app:layout_constraintEnd_toStartOf="@id/btn_divide"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btn_plus_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_divide"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_divide"
        app:layout_constraintBottom_toTopOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_8"
        app:layout_constraintBottom_toTopOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_9"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_9"
        app:layout_constraintBottom_toTopOf="@+id/btn_6"
        app:layout_constraintEnd_toStartOf="@id/btn_multiply"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multiply"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_multiply"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_5"
        app:layout_constraintBottom_toTopOf="@+id/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_6"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_6"
        app:layout_constraintBottom_toTopOf="@+id/btn_3"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_subtract"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_3"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_3"
        app:layout_constraintBottom_toTopOf="@+id/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sum"
        app:layout_constraintBottom_toTopOf="@+id/btn_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_dot"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_equals"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_equals"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_dot" />


</androidx.constraintlayout.widget.ConstraintLayout>